--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <script type="text/javascript" src="scripts/base.js"></script>
+
          <script src="//ajax.googleapis.com/ajax/libs/mootools/1.4.5/mootools-yui-compressed.js"></script>
+          <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+                  <script type="text/javascript" src="scripts/base.js"></script>
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
+        <div id="content" class="mw-body" role="main">
         <h1 id="firstHeading" class="firstHeading" lang="en"><span>Web scraping</span></h1>
 	<div id="bodyContent">
             <div id="siteSub">From Wikipedia, the free encyclopedia</div>
@@ -16,6 +19,6 @@
                     <p>Web scraping is closely related to <a href="/wiki/Web_indexing" title="Web indexing">web indexing</a>, which indexes information on the web using a <a href="/wiki/Internet_bot" title="Internet bot">bot</a> or <a href="/wiki/Web_crawler" title="Web crawler">web crawler</a> and is a universal technique adopted by most search engines. In contrast, web scraping focuses more on the transformation of unstructured data on the web, typically in <a href="/wiki/HTML" title="HTML">HTML</a> format, into structured data that can be stored and analyzed in a central local database or spreadsheet. Web scraping is also related to web automation, which simulates human browsing using computer software. Uses of web scraping include online price comparison, weather data monitoring, website change detection, research, <a href="/wiki/Web_mashup" title="Web mashup" class="mw-redirect">web mashup</a> and web data integration.</p>
                 </div>
         </div>
-  
+        </div>
     </body>
 </html>
