With rudimentary logging (needs work)

--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     </head>
     <body>
         <div id="content" class="mw-body" role="main">
-        <h1 id="firstHeading" class="firstHeading" lang="en"><span>Web scraping</span></h1>
-	<div id="bodyContent">
-            <div id="siteSub">From Wikipedia, the free encyclopedia</div>
-                <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
-                    <p><b>Web scraping</b> (<b>web harvesting</b> or <b>web data extraction</b>) is a computer software technique of <a href="/wiki/Data_scraping" title="Data scraping">extracting information</a> from <a href="/wiki/Website" title="Website">websites</a>. Usually, such software programs simulate human exploration of the <a href="/wiki/World_Wide_Web" title="World Wide Web">World Wide Web</a> by either implementing low-level <a href="/wiki/Hypertext_Transfer_Protocol" title="Hypertext Transfer Protocol">Hypertext Transfer Protocol</a> (HTTP), or embedding a fully-fledged web browser, such as <a href="/wiki/Internet_Explorer" title="Internet Explorer">Internet Explorer</a> or <a href="/wiki/Mozilla_Firefox" title="Mozilla Firefox" class="mw-redirect">Mozilla Firefox</a>.</p>
-                    <p>Web scraping is closely related to <a href="/wiki/Web_indexing" title="Web indexing">web indexing</a>, which indexes information on the web using a <a href="/wiki/Internet_bot" title="Internet bot">bot</a> or <a href="/wiki/Web_crawler" title="Web crawler">web crawler</a> and is a universal technique adopted by most search engines. In contrast, web scraping focuses more on the transformation of unstructured data on the web, typically in <a href="/wiki/HTML" title="HTML">HTML</a> format, into structured data that can be stored and analyzed in a central local database or spreadsheet. Web scraping is also related to web automation, which simulates human browsing using computer software. Uses of web scraping include online price comparison, weather data monitoring, website change detection, research, <a href="/wiki/Web_mashup" title="Web mashup" class="mw-redirect">web mashup</a> and web data integration.</p>
-                </div>
+            <h1 id="firstHeading" class="firstHeading" lang="en"><span>Web scraping</span></h1>
+            <div id="bodyContent">
+                <div id="siteSub">From Wikipedia, the free encyclopedia</div>
+                    <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
+                        <p><b>Web scraping</b> (<b>web harvesting</b> or <b>web data extraction</b>) is a computer software technique of <a href="/wiki/Data_scraping" title="Data scraping">extracting information</a> from <a href="/wiki/Website" title="Website">websites</a>. Usually, such software programs simulate human exploration of the <a href="/wiki/World_Wide_Web" title="World Wide Web">World Wide Web</a> by either implementing low-level <a href="/wiki/Hypertext_Transfer_Protocol" title="Hypertext Transfer Protocol">Hypertext Transfer Protocol</a> (HTTP), or embedding a fully-fledged web browser, such as <a href="/wiki/Internet_Explorer" title="Internet Explorer">Internet Explorer</a> or <a href="/wiki/Mozilla_Firefox" title="Mozilla Firefox" class="mw-redirect">Mozilla Firefox</a>.</p>
+                        <p>Web scraping is closely related to <a href="/wiki/Web_indexing" title="Web indexing">web indexing</a>, which indexes information on the web using a <a href="/wiki/Internet_bot" title="Internet bot">bot</a> or <a href="/wiki/Web_crawler" title="Web crawler">web crawler</a> and is a universal technique adopted by most search engines. In contrast, web scraping focuses more on the transformation of unstructured data on the web, typically in <a href="/wiki/HTML" title="HTML">HTML</a> format, into structured data that can be stored and analyzed in a central local database or spreadsheet. Web scraping is also related to web automation, which simulates human browsing using computer software. Uses of web scraping include online price comparison, weather data monitoring, website change detection, research, <a href="/wiki/Web_mashup" title="Web mashup" class="mw-redirect">web mashup</a> and web data integration.</p>
+                    </div>
+            </div>
         </div>
+        <div id='results'>
+            <h1>Collected Data<span style="font-size: 18px"> (to be sent to server)</span></h1>
+            <pre id="results-container"></pre>
         </div>
+
     </body>
 </html>
